fix gallery overflow

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -17,5 +17,6 @@
 }
 
 .PageContainer {
-    flex: 1 0 0;
+    /* flex: 1 0 0; */
+    overflow-y: scroll;
 }
